<resources>
    <string name="app_name">DISA</string>
    <string name="pengertiantunanetra">Pengertian Tuna Netra</string>
    <string name="ParagrafsatuTN">   Tunanetra berasal dari kata tuna yang berarti rusak atau rugi dan netra yang berarti mata. Jadi tunanetra yaitu individu yang mengalami kerusakan atau hambatan pada organ mata. Dari sudut pandang medis seseorang dikatakan megalami tunanetra apabila “memiliki visus dua puluh per dua ratus atau kurang dan memiliki lantang pandangan kurang dari dua puluh derajat.”
Dengan demikian dapat dipahami bahwa tunanetra yaitu berkurangnya fungsi atau ketidakfungsian indra penglihatan seseorang untuk melihat bayangan benda dalam aktivitas sehari-hari sehingga membutuhkan pendidikan khusus guna mendukung aktivitas belajarnya.
berikut jenis-jenis kebutaan.</string>
    <string name="butatotal">Buta total yaitu kondisi penglihatan yang tidak dapat melihat dua jari di mukanya atau hanya melihat sinar atau cahaya. Mereka tidak bisa menggunakan huruf selain huruf braille. Ciri-ciri buta total diantaranya secara fisik mata terlihat juling, sering berkedip,menyipitkan mata, kelopak mata merah, mata infeksi, gerakan mata tak beraturan dan cepat, mata selalu berair dan pembengkakan pada kulit tempat tumbuh bulu mata. Secara perilaku menggosok mata secara berlebihan, menutup atau melindungi mata sebelah, memiringkan kepala, atau mencondongkan kepala ke depan, sukar membaca atau mengerjakan tugas yang memerlukan penggunaan mata, berkedip lebih banyak, membawa buku ke dekat mata, tidak dapat melihat benda yang agak jauh, menyipitkan mata atau mengerutkan dahi </string>
    <string name="lowvisi">Low fision yaitu kondisi penglihatan yang apabila melihat sesuatu maka harus didekatkan atau mata harus dijauhkan dari objek yang dilihatnya atau memiliki pemandangan kabur ketika melihat objek. Ciri-ciri low fision diantaranya menulis dan membaca dengan jarak yang sangat dekat, hanya dapat membaca huruf yang berukuran besar, mata tampak terlihat putih di tengah mata atau kornea (bagian bening di depan mata) terlihat berkabut, terlihat tidak menatap lurus ke depan, memincingkan mata atau mengerutkan kening terutama di cahaya terang atau saat melihat sesuatu, lebih sulit melihat pada malam hari, pernah mengalami operasi mata dan atau memakai 12
kacamata yang sangat tebal tetapi masih tidak dapat melihat dengan jelas
</string>
    <string name="tunetp21">Samuel P. Hayes dalam Pembelajaran Anak Berkebutuhan Khusus dalam Setting Pendidikan Inklusi menjelaskan bahwa “kemampuan inteligensi anak dengan hendaya penglihatan tidak secara otomatis menjadikan diri mereka mempunyai inteligensi yang rendah.”11 Heyes seorang ahli dibidang pendidikan tunanetra pernah melakukan penelitian mengenai tingkat kecerdasan anak tunanetra. Dari penelitian tersebut didapatkan kesimpulan bahwa:
Ketunanetraan tidak secara otomatis mengakibatkan kecerdasan rendah, mulainya ketunanetraan tidak memengaruhi tingkat kedewasaan, anak tunanetra ternyata banyak yang berhasil mencapai prestasi intelektual yang baik, apabila lingkungan memberikan kesempatan motivasi kepada anak tunanetra untuk berkembang, penyandang ketunanetraan tidak menunjukkan kelemahan dalam inteligensi verbal.
</string>
    <string name="tunetp22">Dari penelitian tersebut dapat diketahui bahwa tingkat kecerdasan anak tunanetra sama dengan anak-anak normal bila lingkungan di sekitar anak mendukung perkembangan potensi anak tunanetra.
Anak-anak yang mengalami tunanetra memang memiliki keterbatasan ataupun ketidakberfungsian indra penglihatan mereka. Namun demikian mereka juga memiliki banyak kemampuan yang lain seperti pertama memiliki kemampuan untuk belajar bahasa dan berbicara meskipun perkembangan anak tunanetra sejak lahir perbendaharaan kata lebih lambat dan sedikit daripada anak normal.14 Kedua memiliki daya ingat yang kuat yang disebabkan kepemilikan kemampuan konseptual setelah melakukan latihan yang berulang-ulang. Ketiga memiliki kemampuan indra peraba yang sangat peka terhadap benda di depannya.15 Keempat memiliki indra pendengaran dengan sensitivitas yang tinggi, hal ini menjadikan indra pendengaran anak tunanetra menggantikan fungsi indra penglihatannya.16
Uraian di atas mengindikasikan bahwa tingkat kecerdasan yang dimiliki oleh anak tunanetra sama dengan kecerdasan anak-anak lainnya.
</string>
    <string name="kbuka">Anak tunanetra secara fisik sama dengan anak-anak pada umumnya, namun terdapat beberapa hal yang membedakan antara keduanya. Terdapat beberapa karakteristik yang ada pada anak tunanetra diantaranya: </string>
    <string name="kognitifbuka">Keterbatasan atau ketidakmampuan penglihatan berpengaruh pada perkembangan dan proses belajar siswa. Lowenfeld sebagaimana yang dikutip oleh Ardhi Wijaya menggambarkan dampak kebutaan dan lowfision terhadap perkembangan kognitif anak. Ia mengidentifikasi keterbatasan anak pada tiga area yaitu: </string>
    <string name="kognitifa">Pengalaman anak tunanetra diperoleh dari indra-indra yang masih berfungsi pada tubuhnya, terutama indra pendengaran dan perabaan. Namun kedua indra tersebut tidak dapat menyeluruh dalam memberikan informasi seperti informasi warna, ukuran, dan ruang. Dalam memperoleh informasi anak haruslah melakukan kontak langsung dengan benda yang ia pelajari, sehingga untuk benda yang terlampau jauh seperti langit dan bintang, benda yang terlalu besar seperti gunung, benda yang terlalu rapuh seperti hewan kecil, atau benda yang membahayakan seperti api </string>
    <string name="kognitifb">Keterbatasan penglihatan membuat anak tunanetra harus belajar berjalan dan mengenali lingkungannya agar mampu melakukan mobilitas secara aman, efektif, dan efisien</string>
    <string name="kognitifc">Anak tunanetra sulit untuk berinteraksi dengan lingkungan, karena keterbatasan penglihatan mereka. Mereka membutuhkan waktu yang relatif lebih lama dalam mengenali lingkungannya</string>
    <string name="akademik">Kemampuan akademik anak tunanetra secara umum sama dengan anak normal lainnya. Ketunanetraan mereka berpengaruh pada keterampilan membaca dan menulis mereka. Untuk memenuhi kebutuhan membaca dan menulis mereka dibutuhkan media dan alat yang sesuai. Anak dengan tunanetra total dapat membaca dan menulis dengan huruf braille, sedangkan anak low fision menggunakan huruf cetak dengan ukuran yang besar</string>
    <string name="fisik">Keadaan fisik anak tunanetra yang sangat mencolok yaitu kelainan pada organ matanya. Terdapat beberapa gejala tunanetra yang dapat diamati yaitu mata juling, sering berkedip, menyipitkan mata, kelopak mata merah, mata infeksi, gerakan mata tak beraturan </string>
    <string name="pembelajarantunet">Pada dasarnya pembelajaran bagi anak tunanetra sama dengan pembelajaran pada umumnya. Namun ada beberapa hal penting yang perlu diperhatikan oleh guru saat proses pembelajaran. Aqila Smart dalam bukunya menjelaskan beberapa prinsip yang harus diperhatikan saat proses pembelajaran bagi anak tunanetra diantaranya: </string>
    <string name="individual">Prinsip individual yakni suatu kondisi dimana guru harus memperhatikan setiap perbedaan yang dimiliki oleh peserta didik tunanetra. Seperti perbedaan umum, mental, fisik, kesehatan dan tingkat ketunanetraan masing-masing siswa. </string>
    <string name="pengalamanpengindra">Pengalaman pengindraan siswa tunanetra sangat penting bagi pemahaman yang akan mereka peroleh. Siswa membutuhkan pengalaman nyata dari apa yang mereka pelajari. Dengan demikian strategi pembelajaran guru harus memungkinkan adanya pengalaman langsung siswa tunanetra terkait materi yang mereka pelajari. </string>
    <string name="totalitas">Prinsip totalitas maksudnya pembelajaran yang diterapkan pada siswa tunanetra hendaknya menggunakan seluruh fungsi indra yang masih berfungsi dengan baik pada diri mereka. Indra ini digunakan oleh guru untuk mengenali objek yang dipelajari siswa secara utuh dan menyeluruh. Misalnya seorang tunanetra ingi mengenali bentuk burung, pembelajaran yang diterapkan harus dapat memberikan informasi yang utuh dan baik mengenai bentuk, ukuran, sifat permukaan, kehangatan, suara dan ciri khas burung tersebut. Sehingga anak mampu mengenali objek secara sempurna.</string>
    <string name="mandiri">Dalam proses pembelajaran guru dapat menjadi fasilitator dan motivator anak untuk dapat belajar secara aktif dan mandiri. Dalam prinsip ini proses pembelajaran bukan sekedar mendengar dan 19
mencatat, akan tetapi juga ikut merasakan dan mengalaminya secara langsung
</string>
    <string name="definisitdsatu">Secara etiologis, gambaran seseorang yang di identifikasikan mengalami ketunadaksaan yaitu seseorang yang mengalami kesulitan mengoptimalkan fungsi anggota tubuh sebagai akibat dari luka, penyakit, pertumbuhan yang salah bentuk, dan akibatnya kemampuan untuk melakukan gerakan-gerakan tubuh tertentu mengalami penurunan.</string>
    <string name="definisitddua">Secara definitif pengertian tunadaksa adalah ketidakmampuan anggota tubuh untuk melaksanakan fungsinya disebabkan oleh berkurangnya kemampuan anggota tubuh untuk melaksanakan fungsi secara normal sebagai akibat dari luka, penyakit, atau pertumbuhan yang tidak sempurna sehingga untuk kepentingan pembelajarannya perlu layanan secara khusus.</string>
    <string name="definisitdtiga">Menurut Somantri Pengertian Tuna daksa adalah suatu keadaan rusak atau terganggu sebagai akibat gangguan bentuk atau hambatan pada tulang, otot, dan sendi dalam fungsinya yang normal. Kondisi ini disebabkan oleh penyakit, kecelakaan, atau dapat juga disebabkan oleh pembawaan sejak lahir. Tuna daksa sering juga diartikan sebagai suatu kondisi yang menghambat kegiatan individu sebagai akibat kerusakan atau gangguan pada tulang dan otot, sehingga mengurangi kapasitas normal individu untuk mengikuti pendidikan dan untuk berdiri sendiri.</string>
    <string name="pengertianautispg1">Autisme berasal dari istilah dalam bahasa Yunani; „aut‟ = diri sendiri, isme‟ orientation/state= orientasi/keadaan. Maka autisme dapat diartikan sebagai kondisi seseorang yang secara tidak wajar terpusat pada dirinya sendiri; kondisi seseorang yang senantiasa berada di dalam dunianya sendiri</string>
    <string name="pengertianautispg2">Istilah “autisme” pertama kali diperkenalkan oleh Leo Kanner pada tahun 1943, selanjutnya ia juga memakai istilah “Early Infantile Autism”, atau dalam bahasa Indonesianya diterjemahkan sebagai “Autisme masa kanak-kanak” . Hal ini untuk membedakan dari orang dewasa yang menunjukkan gejala autisme seperti ini.</string>
    <string name="pengertianautispg3">Autisme merupakan suatu gangguan perkembangan pada anak yang sifatnya komplek dan berat, biasanya telah terlihat sebelum berumur 3 tahun, tidak mampu untuk berkomunikasi dan mengekspresikan perasaan maupun keinginannya. Akibatnya perilaku dan hubungannya dengan orang lain menjadi terganggu, sehingga keadaan ini akan sangat mempengaruhi perkembangan anak selanjutnya.</string>
    <string name="pengertianautispg4">Autisme dapat mengenai siapa saja tidak tergantung pada etnik, tingkat pendidikan, sosial dan ekonomi. Autisme bukanlah masalah baru, dari berbgai bukti yang ada, diketahui kelainan ini sudah ada sejak berabad-abad yang lampau. Hanya saja istilahnya relatif masih baru. Diperkirakan kira-kira sampai 15 tahun yang lalu, autisme merupakan suatu gangguan yang masih jarang ditemukan, diperkirakan hanya 2-4 penyandang autisme. Tetapi sekarang terjdi peningkatan jumlah penyandang autisme sampai lebih kurang 15-20 per 10.000 anak. Jika angka kelahiran pertahun di Indonesia 4,6 juta anak, maka jumlah penyandang autisme pertahun akan bertambah dengan 0,15% yaitu 6900 anak</string>
</resources>